<resources>
    <string name="app_name">SlavskeHelp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account">Профіль</string>
    <string name="search">Пошук інформації</string>
    <string name="wether">Погода</string>
    <string name="news">Новини</string>
    <string name="map">Карта</string>
    <string name="web_cam">Веб-камери</string>
    <string name="change_acc">Змінити аккаунт</string>
    <string name="login">Вхід</string>
    <string name="regist"><u>Зареєструватись</u></string>
    <string name="update_profile"><u>Редагувати профіль</u></string>
    <string name="instruction">Вхід</string>
    <string name="image_login">Логін</string>
    <string name="image_pass">Пароль</string>
    <string name="image_pass_check">Повторіть пароль</string>
    <string name="image_surname">Прізвище</string>
    <string name="image_name">Ім`я</string>
    <string name="image_phone">Контактний телефон</string>
    <string name="image_email">Електронна пошта</string>
    <string name="image_city">Населений пункт</string>
    <string name="regist_button">Реєстрація</string>
    <string name="action_settings">Settings</string>
    <string name="button_search">Знайти</string>
    <string name="change_category_text">Виберіть категорію :</string>
    <string name="change_type_text">Виберіть тип :</string>
    <string name="home">Житло</string>
    <string name="taxi">Таксі</string>
    <string name="entertainment">Розваги</string>
    <string name="hotel">Готелі</string>
    <string name="base">Бази відпочинку</string>
    <string name="private_sector">Приватний сектор</string>
    <string name="all_seasons">Всі сезони</string>
    <string name="winter">Зима</string>
    <string name="summer">Літо</string>
    <string name="tenis">Настільний теніс</string>
    <string name="sauna">Сауна</string>
    <string name="hourse_tourism">Кінний туризм</string>
    <string name="billiards">Більярд</string>
    <string name="bouling">Боулінг</string>
    <string name="big_tenis">Великий теніс</string>
    <string name="kvadro_run">Подорожі на квадроциклах</string>
    <string name="velo_run">Подорожі на велосипедах</string>
    <string name="web_cam_string_1">Гора Тростян</string>
    <string name="web_cam_string_2">Захар Беркут №1</string>
    <string name="web_cam_string_3">Захар Беркут №2</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_web_cam_other_version">web_cam_other_version</string>
    <string name="wether_today">Сьогодні</string>
    <string name="wether_5day">На 5 днів</string>
    <string name="wether_14day">На 14 днів</string>
    <string name="title_activity_temp">temp</string>
    <string name="prompt">Виберіть категорію : </string>
    <string-array name="category_array">
        <item>житло</item>
        <item>таксі</item>
        <item>розваги</item>
    </string-array>
    <string name="type_name">Виберіть тип: </string>
    <string name="note_name">Назва : </string>
    <string name="note_description">Опис : </string>
    <string name="note_add">Додати </string>
    <string name="note_price">Ціна(Новий рік) від: </string>
    <string name="add_photo_text">Додати фото</string>
    <string name="delete_note_text">Видалити </string>
    <string name="add_photo_string">Додати фото</string>
    <string name="price_winter_text">Ціна(Зима) від:</string>
    <string name="summer_price_text">Ціна(Літо) від:</string>
    <string name="other_price_text">Ціна(ВеснаОсінь) від:</string>
    <string name="room_count_text">Кількість кімнат</string>
    <string name="total_count_place">Загальна кількість місць</string>
    <string name="main_service">Послуги, включені в вартість</string>
    <string name="addition_service_taxt">Послуги, за додаткову плату</string>
    <string name="house_address_text">Адреса :</string>
    <string name="auto_marca_text">Марка автомобіля</string>
    <string name="people_count_text">Кількість пасажирів :</string>
    <string name="entertainment_address">Адреса</string>
</resources>
