<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.q.slavskehelp.Registration">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_person_add_black_24dp"
                android:contentDescription="@string/instruction" />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_account_box_black_24dp"
                android:contentDescription="@string/image_login" />
            <EditText
                android:padding="2dp"
                android:inputType="text"
                android:id="@+id/login_input"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="3"
                android:background="@drawable/border_black"
                android:contentDescription="@string/image_pass"
                android:hint="@string/image_login"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_lock_black_24dp"/>
            <EditText
                android:id="@+id/password_input"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="3"
                android:padding="2dp"
                android:background="@drawable/border_black"
                android:hint="@string/image_pass"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_lock_open_black_24dp"/>
            <EditText
                android:id="@+id/password_check"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="3"
                android:padding="2dp"
                android:background="@drawable/border_black"
                android:hint="@string/image_pass_check"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_recent_actors_black_24dp"/>
            <EditText
                android:id="@+id/surname"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="3"
                android:padding="2dp"
                android:background="@drawable/border_black"
                android:hint="@string/image_surname"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_contacts_black_24dp"/>
            <EditText
                android:id="@+id/name"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="3"
                android:padding="2dp"
                android:background="@drawable/border_black"
                android:hint="@string/image_name"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_contact_phone_black_24dp"/>
            <EditText
                android:id="@+id/phone"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="3"
                android:padding="2dp"
                android:background="@drawable/border_black"
                android:hint="@string/image_phone"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_contact_mail_black_24dp"/>
            <EditText
                android:id="@+id/email"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="3"
                android:padding="2dp"
                android:background="@drawable/border_black"
                android:hint="@string/image_email"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_location_city_black_24dp"/>
            <EditText
                android:id="@+id/city"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="3"
                android:padding="2dp"
                android:background="@drawable/border_black"
                android:hint="@string/image_city"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </LinearLayout>
            <Button
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:text="@string/regist_button"
                android:background="@drawable/border_button"
                android:textColor="@color/colorHeaderText"

                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:background="@color/colorBackground"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/navigation_header"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
