<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.q.slavskehelp.Profile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="3"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_1489671517_account_circle"
                    android:contentDescription="@string/instruction" />
            </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            >
            <TextView
                android:textColor="@color/colorMainText"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/image_login"/>
            <EditText
                android:padding="2dp"
                android:inputType="text"
                android:id="@+id/login_profile"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/border_black"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            >
            <TextView
                android:textColor="@color/colorMainText"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/image_name"/>
            <EditText
                android:padding="2dp"
                android:inputType="text"
                android:id="@+id/name_profile"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/border_black"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            >
            <TextView
                android:textColor="@color/colorMainText"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/image_surname"/>
            <EditText
                android:padding="2dp"
                android:inputType="text"
                android:id="@+id/surname_profile"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/border_black"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            >
            <TextView
                android:textColor="@color/colorMainText"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/image_phone"/>
            <EditText
                android:padding="2dp"
                android:inputType="phone"
                android:id="@+id/phone_profile"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/border_black"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            >
            <TextView
                android:textColor="@color/colorMainText"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/image_email"/>
            <EditText
                android:padding="2dp"
                android:inputType="textEmailAddress"
                android:id="@+id/email_profile"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/border_black"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:textColor="@color/colorMainText"
                android:text="@string/image_city"/>
            <EditText
                android:padding="2dp"
                android:inputType="text"
                android:id="@+id/city_profile"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@drawable/border_black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/text_change_profile"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="3"
                android:text="@string/update_profile"
                android:textColor="@color/colorMainText"
                android:onClick="Change_profile_text_click"/>
            <Button
                android:id="@+id/button_change_profile"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:text="@string/update_profile"
                android:textColor="@color/colorHeaderText"
                android:background="@drawable/border_button"
                android:onClick="Change_profile_button_click"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:background="@color/colorBackground"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/navigation_header"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
