<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.q.slavskehelp.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="3"
                >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_account_circle_black_48dp"
                        android:contentDescription="@string/instruction" />
                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:src="@mipmap/ic_account_box_black_24dp"
                        android:contentDescription="@string/image_login" />
                    <EditText
                        android:padding="2dp"
                        android:inputType="text"
                        android:id="@+id/login_input"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_weight="3"
                        android:background="@drawable/border_black"
                        android:contentDescription="@string/image_pass"
                        android:hint="@string/image_login"
                        />
                    </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_lock_black_24dp"/>
            <EditText
                android:id="@+id/password_input"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="3"
                android:padding="2dp"
                android:background="@drawable/border_black"
                android:hint="@string/image_pass"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </LinearLayout>
            <Button
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:background="@drawable/border_button"
                android:textColor="@color/colorHeaderText"

                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2"
            >
            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/regist"
                android:linksClickable="true"
                android:autoLink="all"
                android:textColorLink="@color/colorMainText"
                android:textColor="@color/colorMainText"


                />
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:background="@color/colorBackground"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/navigation_header"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
