<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.q.slavskehelp.Search">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="2dp"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="3"
                android:textSize="24sp"
                android:textColor="@color/colorMainText"
                android:text="@string/change_category_text"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="2dp"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="3"
                android:textSize="24sp"
                android:textColor="@color/colorMainText"
                android:text="@string/change_type_text"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </LinearLayout>
            <Button
                android:id="@+id/button_search"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:text="@string/button_search"
                android:background="@drawable/border_button"
                android:drawableRight="@drawable/ic_search_white_24px"

                android:textColor="@color/colorHeaderText"
                android:onClick="search_Click"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:background="@color/colorBackground"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/navigation_header"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
